k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-svc
  labels:
    app: ml-app
spec:
  selector:
    app: ml-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
